--- a/gb/19/11/9/n11644367.md
+++ b/gb/19/11/9/n11644367.md
@@ -1,16 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/msn234/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/msn234/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/msn234/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/msn234/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/msn234/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/msn234/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/msn234/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/msn234/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/msn234/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/msn234/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/msn234/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/msn234/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/msn234/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>元培医大校庆 西城扶轮社捐清寒助学金</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/89d29f0edcc311e6eeed19ace0feff6a-600x400.jpg" />
 <h6>西城扶轮社创社社长黄叶铭赠送青年就业座谈两位主讲社员礼物。（西城扶轮社提供）
 </h6>
 <hr>
-<p>【大纪元2019年11月9日讯】（大纪元记者宋顺澈台湾新竹报导）创校55周年的新竹元培医事科技大学，于11月8日举办校庆暨国际放射线纪念日系列活动，台北<ahref="https://github.com/msn234/djy/blob/master/gb/tag/%E8%A5%BF%E5%9F%8E%E6%89%B6%E8%BD%AE%E7%A4%BE.md#1">西城扶轮社</a>特别为学生举办青年创业座谈会，并在会中捐赠<ahref="https://github.com/msn234/djy/blob/master/gb/tag/%E6%B8%85%E5%AF%92%E5%8A%A9%E5%AD%A6%E9%87%91.md#1">清寒助学金</a>2.5万元，前卫福部长邱文达也特地从美国回台祝贺。</p>
-<p>台北<ahref="https://github.com/msn234/djy/blob/master/gb/tag/%E8%A5%BF%E5%9F%8E%E6%89%B6%E8%BD%AE%E7%A4%BE.md#1">西城扶轮社</a>创社社长黄叶铭在致词中谈到，国际扶轮在全球致力根除小儿麻痹症，30多年来目前只剩三个国家有小儿麻痹症，而台湾的扶轮社除了做许多社会公益服务之外，也很关心台湾青年学子的学习情况，看到元培的学生们个个都很有活力，感觉学习力旺盛，也感到非常开心。</p>
-<figure id="11644371" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2019/11/2164763bb5f163101792c089d9647d55-450x338.jpg" alt="前卫福部长邱文达也特地从美国回台祝贺" width="500" /><figcaption class="wp-caption-text">前卫福部长邱文达也特地从美国回台祝贺。（西城扶轮社提供）</figcaption></figure>
-<p>西城扶轮社特别捐赠<ahref="https://github.com/msn234/djy/blob/master/gb/tag/%E6%B8%85%E5%AF%92%E5%8A%A9%E5%AD%A6%E9%87%91.md#1">清寒助学金</a>2.5万元，希望鼓励学生能认真学习，未来也能为社会服务及帮助更多人。元培医事科技大学校长林志城及执行董事蔡雅贤非常感谢扶轮社的捐助。</p>
-<figure id="11644369" style="width: 600px" class="wp-caption aligncenter"><img class="" src="https://i.epochtimes.com/assets/uploads/2019/11/5fdfb7b03d3cc207a0a67f36bef2ec0a-450x207.jpg" alt="西城扶轮社参访新竹元培医事科技大学并捐赠清寒助学金" width="600" b="276" /><figcaption class="wp-caption-text">西城扶轮社参访新竹元培医事科技大学并捐赠清寒助学金。（西城扶轮社提供）</figcaption></figure>
+<p>【大纪元2019年11月9日讯】（大纪元记者宋顺澈台湾新竹报导）创校55周年的新竹元培医事科技大学，于11月8日举办校庆暨国际放射线纪念日系列活动，台北<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A5%BF%E5%9F%8E%E6%89%B6%E8%BD%AE%E7%A4%BE.md#1">西城扶轮社</a>特别为学生举办青年创业座谈会，并在会中捐赠<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B8%85%E5%AF%92%E5%8A%A9%E5%AD%A6%E9%87%91.md#1">清寒助学金</a>2.5万元，前卫福部长邱文达也特地从美国回台祝贺。</p>
+<p>台北<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A5%BF%E5%9F%8E%E6%89%B6%E8%BD%AE%E7%A4%BE.md#1">西城扶轮社</a>创社社长黄叶铭在致词中谈到，国际扶轮在全球致力根除小儿麻痹症，30多年来目前只剩三个国家有小儿麻痹症，而台湾的扶轮社除了做许多社会公益服务之外，也很关心台湾青年学子的学习情况，看到元培的学生们个个都很有活力，感觉学习力旺盛，也感到非常开心。</p>
+<p>西城扶轮社特别捐赠<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B8%85%E5%AF%92%E5%8A%A9%E5%AD%A6%E9%87%91.md#1">清寒助学金</a>2.5万元，希望鼓励学生能认真学习，未来也能为社会服务及帮助更多人。元培医事科技大学校长林志城及执行董事蔡雅贤非常感谢扶轮社的捐助。</p>
 <p>扶轮社的五大服务中非常重视职业服务，所以西城扶轮社特地安排青年就业讲座，邀请两位社员来跟即将毕业的学生分享工作经验与就业规划。一位是曾在西门子医疗仪器工作30多年经验的副社长苏仲玉，目前是乔伊实业有限公司总经理，跟学生分享在西门子医疗仪器的工作经验，谈及跨国公司医疗器材设备技术的进步概况与严谨专业的精神。</p>
 <p>另一位是理事李博荣，目前在桃园的亚洲硅谷计划执行中心担任行政长，也曾担任过桃园航空城公司副总经理及台北市政府顾问，分享政府目前积极推动台湾经济结构转型，而亚洲硅谷计划主要是以物联网产业促进转型升级，以创新产业驱动经济成长，希望打造出属于台湾的独角兽企业。</p>
 <p>责任编辑：王愉悦</p>
@@ -19,42 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/17/3/28/n8975410.md#1">竹市校园就业博览会 元培329登场  主打医疗服务</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/18/3/9/n10203921.md#1">就业中心与贾桃乐联手出击   帮学子找职缺</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/18/9/11/n10706270.md#1">亚洲侨生保荐单位 参访元培医事科技大学</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/18/11/6/n10832984.md#1">全国第一 元培科大启动青银共学中心</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/18/11/26/n10874777.md#1">日本医疗健康养老论坛  元培医大举行</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/18/12/3/n10888038.md#1">陪长者玩桌游防失智  元培医科大学生制辅具卡</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/14/n12029640.md#1">爸妈别烦恼！竹市儿童口罩16日起贩售增3倍</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/13/n12026800.md#1">竹县召开兴建焚化炉公听会 听取居民意见</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/10/n12018554.md#1">竹县警扩大临检防疫 劝导类同酒店业者歇业</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/9/n12017211.md#1">市府携手慢飞儿散布爱 暖心为防疫便当加菜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/28/n8975410.md#1">竹市校园就业博览会 元培329登场  主打医疗服务</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/9/n10203921.md#1">就业中心与贾桃乐联手出击   帮学子找职缺</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/11/n10706270.md#1">亚洲侨生保荐单位 参访元培医事科技大学</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/6/n10832984.md#1">全国第一 元培科大启动青银共学中心</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/11/26/n10874777.md#1">日本医疗健康养老论坛  元培医大举行</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/3/n10888038.md#1">陪长者玩桌游防失智  元培医科大学生制辅具卡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680722.md#1">工研院携手致茂办量测论文竞赛 培育技术人才</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680584.md#1">苗栗春祭暨遥祭黄陵联合祭典</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680574.md#1">事迹受肯定 大千三位医事人员获优秀青年表扬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678598.md#1">力积电董事长黄崇仁获颁阳明交大名誉博士</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/30/n11225005.md#1" target="_blank">林辉：中共高规格接待蒙古独裁者背后的丑行</a></li><li><a href="https://github.com/msn234/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/15/n10487846.md#1" target="_blank">功夫·寻道——武术大师李有甫的故事</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10234497.md#1" target="_blank">林辉：财大气粗的共产国际背后是血腥掠夺</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/22/n8022581.md#1" target="_blank">因祸得福，我用生命迎接春天</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/13/n12025599.md#1">【拍案惊奇】中共军队频动作 传习近平或麻烦了</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/12/n12024074.md#1">副省长坐镇 火化28岁还有体温的她</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/12/n12024410.md#1">中共肺炎在台湾“零复阳” 张上淳推估一原因</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/12/n12025102.md#1">港媒：习近平管得了谭德塞 管不住任志强</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/12/n12024673.md#1">黑人流离失所被虐待 非洲多国谴责中共</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/11/n12023271.md#1">否认台湾曾警示病毒人传人 谭德塞遭艺人呛爆</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/12/n12023872.md#1">澳洲小狗故意贴地走路 嘲弄腿短的同伴</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/12/n12025294.md#1">不爽台湾被抹黑 洋女婿吴凤吁联署罢免谭德塞</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/13/n12025668.md#1">何妤玟惊曝年初离婚 自认不适合再当对方太太</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/11/n12022437.md#1">全昭旻休养中感谢各界祝福：既温暖又感激</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/11/n12023098.md#1">曾于地府做冥判 清末民初奇人讲述幽冥见闻</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/12/n12023749.md#1">民调：近半美国人认为 这波疫情是神的警示</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/12/n12024552.md#1">古今传奇：天门为何人开启</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/6/n12007147.md#1">糟老头和流浪汉偶露仙术  不留踪影在人间</a></li>
-<li><a href="https://github.com/msn234/djy/blob/master/gb/20/4/13/n12026626.md#1">意男高音献唱“希望的音乐” 网上千万人看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/msn234/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/msn234/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/9/n11644367.htm">元培医大校庆 西城扶轮社捐清寒助学金</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/9/n11644367.htm">元培医大校庆 西城扶轮社捐清寒助学金</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/msn234/djy/blob/master/gb/19/11/9/n11644367.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/msn234/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/msn234/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/msn234/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/msn234/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/msn234/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/11/9/n11644367.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
